# workbuddy

./: CMakeLists.txt  main.cpp
backend/include/: TableModel.h
backend/src/: TableModel.cpp  main.cpp
frontend/qml/: CMakeLists.txt  main.qml
